--- a/scannercli.yaml
+++ b/scannercli.yaml
@@ -1,6 +1,6 @@
 name: twenty
 url: https://github.com/twentyhq/twenty.git
-tags: [ v0.33.3, v0.33.2, v0.33.1, v0.33.0, v0.32.0, v0.31.0, v0.30.0, v0.29.0, v0.28.0, v0.27.0, v0.26.0, v0.25.0 ]
 nestPath: packages/twenty-server
 scanner: sonarqube
 sonarHost: http://localhost:9000
+FF_CLEANUP: true
